Fix code smells with IDE assist